app/src/main/java/com/example/fail/Source.kt
package com.example.fail

data class Source(
    val id: String,
    val name: String
)